--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "cse341.002",
   "version": "1.0.0",
-  "description": "",
+  "description": "Contacts API for CSE 341",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
